--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -28,3 +28,11 @@ coding_style:
         spaces:
             around_operators:
                 concatenation: true
+build:
+    tests:
+        override:
+            -
+                command: 'vendor/bin/phpunit --coverage-clover=some-file'
+                coverage:
+                    file: 'some-file'
+                    format: 'clover'
