Fix: Showing error on build status

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,7 +1,7 @@
 # .scrutinizer.yml
 
 checks:
-    php:
+    php: true
         fix_php_opening_tag: false
         remove_php_closing_tag: false
         one_class_per_file: false
