--- a/tests/codeception/acceptance.suite.yml
+++ b/tests/codeception/acceptance.suite.yml
@@ -11,12 +11,13 @@
 class_name: AcceptanceTester
 modules:
   enabled:
-    - WebDriver
-    - tests\codeception\_support\WebHelper
-    - tests\codeception\_support\DynamicFixtureHelper
+  - WebDriver
+  - tests\codeception\_support\WebHelper
+  - tests\codeception\_support\DynamicFixtureHelper
   config:
     WebDriver:
       url: 'http://localhost:8080/'
       browser: chrome
       window_size: maximize
+      restart: true
       port: 4444
