--- a/.travis.yml
+++ b/.travis.yml
@@ -1,49 +1,60 @@
-language: php
-sudo: enabled
+language: php	
+sudo: enabled	
 
-services:
-  - mysql
+ services:	
+  - mysql	
 
-addons:
-  chrome: stable
+ addons:	
+  chrome: stable	
 
-git:
-  depth: 3
+ git:	
+  depth: 3	
 
-php:
-  - '5.6'
-  - '7.0'
-  - '7.1'
-  - '7.2'
+ php:	
+  - '5.6'	
+  - '7.0'	
+  - '7.1'	
+  - '7.2'	
 
-env:
-  global:
-    - HUMHUB_PATH=/opt/humhub
-  matrix:
-    - HUMHUB_VERSION=master
-    - HUMHUB_VERSION=v1.3.14
+ env:	
+  global:	
+    - HUMHUB_PATH=/opt/humhub	
+  matrix:	
+    - HUMHUB_VERSION=master	
+    - HUMHUB_VERSION=v1.3.14	
 
-matrix:
-  exclude:
-    - php: '7.2'
-      env: HUMHUB_VERSION=v1.3.14
-  fast_finish: true
+ matrix:	
+  exclude:	
+    - php: '7.2'	
+      env: HUMHUB_VERSION=v1.3.14	
+  fast_finish: true	
 
-cache:
-  directories:
-    - $HOME/.composer/cache
+ cache:	
+  directories:	
+    - $HOME/.composer/cache	
 
-install:
-  - .travis/install-dependencies.sh
-  - .travis/setup-humhub.sh
+ install:	
+  - .travis/install-dependencies.sh	
+  - .travis/setup-humhub.sh	
 
-before_script:
-  - $HOME/chromedriver --url-base=/wd/hub &
-  - php --server 127.0.0.1:8080 --docroot ${HUMHUB_PATH} &>/dev/null &
-  - sleep 5
-  - curl --fail --head http://127.0.0.1:8080/index-test.php
+ before_script:	
+  - $HOME/chromedriver --url-base=/wd/hub &	
+  - php --server 127.0.0.1:8080 --docroot ${HUMHUB_PATH} &>/dev/null &	
+  - sleep 5	
+  - curl --fail --head http://127.0.0.1:8080/index-test.php	
 
-script:
-  - cd tests
-  - php ${HUMHUB_PATH}/protected/vendor/bin/codecept build
-  - php ${HUMHUB_PATH}/protected/vendor/bin/codecept run --env travis
+ script:	
+  - cd tests	
+  - php ${HUMHUB_PATH}/protected/vendor/bin/codecept build	
+  - php ${HUMHUB_PATH}/protected/vendor/bin/codecept run --env travis	
+
+ paths:	
+    tests: tests	
+    output: tests/_output	
+    data: tests/_data	
+    support: tests/_support	
+    envs: tests/_envs	
+actor_suffix: Tester	
+extensions:	
+    enabled:	
+        - Codeception\Extension\RunFailed
