--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -7,7 +7,7 @@ on:
 
 label:
 
-    runs-on: ubuntu-latest, windows-latest, macOS-latest
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/labeler@v2
